--- a/xss.html
+++ b/xss.html
@@ -28,7 +28,6 @@ function makeCorsRequest() {
     alert('CORS not supported');
     return;
   }
-  alert(xhr);
   // Response handlers.
   xhr.onload = function() {
     var text = xhr.responseText;
@@ -39,6 +38,7 @@ function makeCorsRequest() {
   };
   xhr.send();
 }
+makeCorsRequest();
     </script>    
   </body>
 </html>
