--- a/xss1.html
+++ b/xss1.html
@@ -11,6 +11,8 @@ function httpGet()
 {
     var xmlHttp = new XMLHttpRequest();
     xmlHttp.open( "GET", 'https://joe.web.ctfcompetition.com', false ); // false for synchronous request
+    xmlHttp.setRequestHeader( 'Access-Control-Allow-Origin', '*');
+    xmlHttp.withCredentials = false;
     xmlHttp.send( null );
 }
   
